# crud_imc

./: .gitignore  README.md  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py  utils.py
frontend/: app.py
frontend/.streamlit/: config.toml
